--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "author": "Matt Harrison <hi@matt-harrison.com>",
   "license": "MIT",
   "dependencies": {
-    "hapi": "^17.3.1",
+    "@hapi/hapi": "^20.1.4",
     "inert": "^5.1.0"
   },
   "devDependencies": {
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15"
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2"
   }
 }
